--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>Pixel Dash 🏃‍♂️💨</h1>
   <canvas id="gameCanvas" width="800" height="400"></canvas>
+  <p>Press <strong>Space</strong> to jump. Collect coins 🪙 and avoid spikes 🔺!</p>
   <script src="game.js"></script>
 </body>
 </html>
