--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
   <h1>Pixel Dash 🏃‍♂️💨</h1>
+  <input type="text" id="username" placeholder="Enter your name" />
+  <button onclick="startGame()">Start Game</button>
   <canvas id="gameCanvas" width="800" height="400"></canvas>
-  <p>Press <strong>Space</strong> to jump. Collect coins 🪙 and avoid spikes 🔺!</p>
+  <div id="leaderboard">
+    <h2>🏆 Leaderboard</h2>
+    <ul id="leaderboard-list"></ul>
+  </div>
   <script src="game.js"></script>
 </body>
 </html>
